Get extremely sure rekonq menu button exists when used :)

BUG: 297630

Backported from master branch